// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SSO action creators cancelReceiving should reset the selected claim 1`] = `
Array [
  Object {
    "type": "RESET_SELECTED",
  },
  Object {
    "actions": Array [
      Object {
        "routeName": "Home",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;

exports[`SSO action creators cancelSSO should clear credential request 1`] = `
Array [
  Object {
    "type": "CLEAR_CREDENTIAL_REQUEST",
  },
  Object {
    "actions": Array [
      Object {
        "routeName": "Home",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": undefined,
    "type": "Navigation/RESET",
  },
]
`;
